syntax = "proto3";
package helloworld;

service Greeter {
    rpc Execute (ExecuteRequest) returns (ExecuteResponse);
    // rpc GetComponent (HelloRequest) returns (HelloReply);
    // rpc GetBlock (HelloRequest) returns (HelloReply);
    // rpc GetSessionKey (HelloRequest) returns (HelloReply);
}

message ExecuteRequest {
    string max_fee = 1;
    repeated string signature = 2;
    string nonce = 3;
    string sender_address = 4;
    repeated string calldata = 5;
}

message ExecuteResponse {
    bool success = 1;
}
